[tool.poetry]
name = "metamorph"
version = "0.1.0"
description = ""
authors = ["victorlandeau <vlandeau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
polynectar = {version = "^0.1.0", source = "ekinox"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[[tool.poetry.source]]
name = "ekinox"
url = "https://europe-west1-python.pkg.dev/ekinox-showcase-283515/test-pypi-talk-vla/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
